<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_main_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_create_activity" />

        <TextView
            android:id="@+id/tv_repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_main_information"
            android:layout_marginTop="@dimen/main_margin_after_description"
            android:text="@string/repository_name"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/et_repository_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_repo_name"
            android:inputType="text"
            android:nextFocusForward="@+id/et_repository_description_value" />

        <TextView
            android:id="@+id/tv_repo_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_repository_name_value"
            android:text="@string/repository_description"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/et_repository_description_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_repo_description"
            android:inputType="text"
            android:nextFocusForward="@+id/et_repository_homepage_value" />

        <TextView
            android:id="@+id/tv_homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_repository_description_value"
            android:text="@string/repository_homepage"
            android:textSize="@dimen/medium_text_size" />

        <EditText
            android:id="@+id/et_repository_homepage_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_homepage"
            android:inputType="text"
            android:nextFocusForward="@+id/b_create_new_repo"
            android:textSize="@dimen/large_text_size" />

        <Button
            android:id="@+id/b_create_new_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_repository_homepage_value"
            android:text="@string/create_new_repo"
            android:textSize="@dimen/large_text_size" />


    </RelativeLayout>
</ScrollView>
